# sci-calc

./: Cargo.toml  LICENSE  README.md
src/: ast.rs  context.rs  grammar.lalrpop  grammar.pest  lexer.rs  lib.rs  main.rs  parser.rs
src/context/: builtins.rs  mod.rs  tests.rs
tests/: tests.rs
