[package]
name = "scientific-calculator"
version = "0.1.0"
authors = ["Jaxson Pahukula <jaxpahu@gmail.com>"]
edition = "2021"

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
ansi_term = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
libm = "0.2.8"
rustyline = "14.0.0"
