[package]
name = "sci-calc"
description = "A fully-functional scientific calculator with command line interface."
version = "1.0.0"
authors = ["Jaxson Pahukula <jaxpahu@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jaxsonp/sci-calc"
license = "MIT"
keywords = ["calculator", "scientific", "sci-calc", "math", "cli"]
categories = ["command-line-utilities"]

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
ansi_term = "0.12.1"
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
libm = "0.2.8"
rustyline = "14.0.0"
